// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutomatedChecksView renders when status scan <Completed> 1`] = `
<div
  className="automatedChecksView"
>
  <TitleBar
    deps={
      Object {
        "getCardSelectionViewData": [Function],
        "getUnifiedRuleResultsDelegate": [Function],
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "scanActions": undefined,
        },
      }
    }
  />
  <div
    className="mainContentWrapper"
  >
    <CommandBar
      deps={
        Object {
          "getCardSelectionViewData": [Function],
          "getUnifiedRuleResultsDelegate": [Function],
          "scanActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "scanActions": undefined,
          },
        }
      }
      deviceStoreData={Object {}}
      scanStoreData={
        Object {
          "status": 2,
        }
      }
    />
    <main>
      <HeaderSection />
      <ScanningSpinner
        aria-live="assertive"
        isSpinning={false}
        label="Scanning..."
      />
      <CardsView
        deps={
          Object {
            "getCardSelectionViewData": [Function],
            "getUnifiedRuleResultsDelegate": [Function],
            "scanActionCreator": proxy {
              "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
              "scanActions": undefined,
            },
          }
        }
        targetAppInfo={
          Object {
            "name": "test-target-app-name",
          }
        }
        userConfigurationStoreData={
          Object {
            "isFirstTime": false,
          }
        }
      />
    </main>
  </div>
</div>
`;

exports[`AutomatedChecksView renders when status scan <Failed> 1`] = `
<div
  className="automatedChecksView"
>
  <TitleBar
    deps={
      Object {
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "scanActions": undefined,
        },
        "windowStateActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActionCreator": undefined,
          "windowStateActions": undefined,
        },
      }
    }
    windowStateStoreData="window state store data"
  />
  <div
    className="mainContentWrapper"
  >
    <CommandBar
      deps={
        Object {
          "scanActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "scanActions": undefined,
          },
          "windowStateActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "windowFrameActionCreator": undefined,
            "windowStateActions": undefined,
          },
        }
      }
      deviceStoreData={
        Object {
          "connectedDevice": "TEST DEVICE",
        }
      }
      scanStoreData={
        Object {
          "status": 3,
        }
      }
    />
    <main>
      <HeaderSection />
      <ScanningSpinner
        aria-live="assertive"
        isSpinning={false}
        label="Scanning..."
      />
      <DeviceDisconnectedPopup
        deviceName="TEST DEVICE"
        onConnectNewDevice={[Function]}
        onRescanDevice={[Function]}
      />
    </main>
  </div>
</div>
`;

exports[`AutomatedChecksView renders when status scan <Scanning> 1`] = `
<div
  className="automatedChecksView"
>
  <TitleBar
    deps={
      Object {
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "scanActions": undefined,
        },
        "windowStateActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActionCreator": undefined,
          "windowStateActions": undefined,
        },
      }
    }
    windowStateStoreData="window state store data"
  />
  <div
    className="mainContentWrapper"
  >
    <CommandBar
      deps={
        Object {
          "scanActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "scanActions": undefined,
          },
          "windowStateActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "windowFrameActionCreator": undefined,
            "windowStateActions": undefined,
          },
        }
      }
      deviceStoreData={
        Object {
          "connectedDevice": "TEST DEVICE",
        }
      }
      scanStoreData={
        Object {
          "status": 1,
        }
      }
    />
    <main>
      <HeaderSection />
      <ScanningSpinner
        aria-live="assertive"
        isSpinning={true}
        label="Scanning..."
      />
    </main>
  </div>
</div>
`;

exports[`AutomatedChecksView renders when status scan <undefined> 1`] = `
<div
  className="automatedChecksView"
>
  <TitleBar
    deps={
      Object {
        "scanActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "scanActions": undefined,
        },
        "windowStateActionCreator": proxy {
          "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
          "windowFrameActionCreator": undefined,
          "windowStateActions": undefined,
        },
      }
    }
    windowStateStoreData="window state store data"
  />
  <div
    className="mainContentWrapper"
  >
    <CommandBar
      deps={
        Object {
          "scanActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "scanActions": undefined,
          },
          "windowStateActionCreator": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "windowFrameActionCreator": undefined,
            "windowStateActions": undefined,
          },
        }
      }
      deviceStoreData={
        Object {
          "connectedDevice": "TEST DEVICE",
        }
      }
      scanStoreData={
        Object {
          "status": undefined,
        }
      }
    />
    <main>
      <HeaderSection />
      <ScanningSpinner
        aria-live="assertive"
        isSpinning={false}
        label="Scanning..."
      />
    </main>
  </div>
</div>
`;
